Fix doctor photo alignment on doctors page
Add vertical-align: top to .staff-member cards so all photos
align at the top of each row regardless of content height.

--- a/css/style.css
+++ b/css/style.css
@@ -947,6 +947,8 @@ a {
 
 		display: inline-block;
 
+		vertical-align: top;
+
 		width: 26%;
 
 		padding: 2%;
